# xelarius

./: .gitignore  COMMANDS.md  Cargo.toml  DOCS.md  Dockerfile  LICENSE  README.md  WHITEPAPER.md  docker-compose.yml
.github/workflows/: ci.yml
scripts/: run_dev.sh
xelarius-contracts/: Cargo.toml
xelarius-core/: Cargo.toml
xelarius-core/src/: lib.rs
xelarius-node/: Cargo.toml
xelarius-node/src/: chain.rs  main.rs  network.rs  rpc.rs  tasks.rs
