[package]
name = "xelarius-node"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
libp2p = { version = "0.53", features = ["dns", "tokio"] }
libp2p-gossipsub = "0.44"
libp2p-tcp = "0.40"
libp2p-noise = "0.44"
libp2p-yamux = "0.44"
serde_json = "1.0"
xelarius-core = { path = "../xelarius-core" }
