[package]
name = "xelarius-node"
version = "0.1.0"
edition = "2024"

[dependencies]
libp2p = { version = "0.52", features = [
  "tcp",
  "dns",
  "noise",
  "yamux",
  "gossipsub",
  "macros"
] }
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0"
xelarius-core = { path = "../xelarius-core" }
